# ConfigSync

./: .gitignore  README.md  README_CN.md  main.py  pyproject.toml
config/: config.yaml  config_example.yaml
scripts/: install_conda.sh  install_npm.sh  ssh_postcheck.sh
src/config_sync/: __init__.py  __main__.py  cli.py  sync.py  utils.py
